// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex.ts - typescript-verify 1`] = `
type T = [("a" | "b")?];
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
type T = [("a" | "b")?];

`;

exports[`simple.ts - typescript-verify 1`] = `
type X = [number, string?];
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
type X = [number, string?];

`;
